--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ Fonts
 body {
   font-family: "Montserrat";
   background-color: #f5f5f5;
-  /* overflow-x: hidden; */
+  overflow-x: hidden;
 }
 body::-webkit-scrollbar {
   display: none;
@@ -305,7 +305,7 @@ Home Section
     height: 58px;
     display: flex;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     top: 36px;
     justify-content: space-between;
     z-index: 10;
